[gd_scene load_steps=10 format=3 uid="uid://dhpervx1656ow"]

[ext_resource type="PackedScene" path="res://game/prototype/lighthouse witch/module/character/look_at_mouse_module.tscn" id="2"]
[ext_resource type="Shader" path="res://game/prototype/lighthouse witch/material/toon_gles2.gdshader" id="3"]
[ext_resource type="Script" path="res://game/prototype/lighthouse witch/script/player/ability_beam.gd" id="6"]
[ext_resource type="Script" path="res://game/prototype/lighthouse witch/script/player/body_sway.gd" id="7"]
[ext_resource type="Script" path="res://game/prototype/lighthouse witch/script/player/character_control.gd" id="8"]

[sub_resource type="CylinderShape3D" id="20"]
height = 0.85
radius = 0.3

[sub_resource type="CylinderMesh" id="19"]
top_radius = 0.3
bottom_radius = 0.2
height = 0.9

[sub_resource type="ShaderMaterial" id="22"]
render_priority = 0
shader = ExtResource("3")

[sub_resource type="ShaderMaterial" id="52"]
render_priority = 0
shader = ExtResource("3")

[node name="player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.3549, 2.93346, -3.4745)
script = ExtResource("8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("20")

[node name="body" type="Node3D" parent="."]
script = ExtResource("7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="body"]
mesh = SubResource("19")
skeleton = NodePath("../..")

[node name="face" type="Node3D" parent="body"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0983053)

[node name="head" type="CSGSphere3D" parent="body/face"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.771, 0)
radius = 0.35
rings = 4

[node name="hat" type="CSGCombiner3D" parent="body/face"]
transform = Transform3D(1, 0, 0, 0, 0.973511, -0.22864, 0, 0.22864, 0.973511, 0, -0.0986195, -0.197012)
material_override = SubResource("22")

[node name="CSGCylinder3" type="CSGCylinder3D" parent="body/face/hat"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00405, 0)
radius = 0.7
height = 0.05
smooth_faces = false

[node name="CSGCylinder2" type="CSGCylinder3D" parent="body/face/hat"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.54405, 0)
radius = 0.4
sides = 7
cone = true
smooth_faces = false

[node name="CSGCylinder4" type="CSGCylinder3D" parent="body/face/hat"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.54405, 0)
radius = 0.231
height = 0.207
sides = 7
smooth_faces = false

[node name="arm" type="CSGCombiner3D" parent="body"]

[node name="arm_right" type="CSGSphere3D" parent="body/arm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -0.1)
radius = 0.15
material = SubResource("52")

[node name="arm_left" type="CSGSphere3D" parent="body/arm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, -0.1)
radius = 0.15
material = SubResource("52")

[node name="shoot_pos" type="Marker3D" parent="body/arm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)

[node name="look_at_mouse" parent="." instance=ExtResource("2")]
script = null

[node name="ability_beam" type="Node" parent="."]
script = ExtResource("6")

[node name="light_start" type="OmniLight3D" parent="ability_beam"]

[node name="light_end" type="OmniLight3D" parent="ability_beam"]
light_color = Color(0.933333, 0.941176, 0.0470588, 1)
light_energy = 3.0
omni_range = 2.0

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(0.737255, 0.972549, 0, 1)
light_energy = 0.5
shadow_enabled = true
omni_range = 3.0
